--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-body {
+
+html {
+    scroll-behavior: smooth;
+  }
+  body {
     font-family: Arial, serif;
     margin: 0;
     padding: 0;
@@ -12,6 +16,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 /* Logo styles */
@@ -98,7 +106,8 @@ nav ul li {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    display: none;
+    display: block;
+    z-index: 1000;
 }
 
 .menu-items a {
@@ -147,18 +156,19 @@ nav ul li {
     text-align: center;
 }
 
+
 /* Recipe container styles */
 .recipe-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 /* Recipe card styles */
 .recipe {
-    flex: 10px;
+    flex: -50px;
     background-color: white;
     border-radius: 10px;
     padding: 20px;
@@ -166,11 +176,18 @@ nav ul li {
 }
 
 .recipe img {
-    width: 100%;
-    border-radius: 10px;
+    width: 30%;
+    border-radius: 15px;
     margin-bottom: 15px;
     filter: brightness(100%);
 }
+.recipe .recipe-image {
+    width: 100%;
+    height: 1000px; /* Adjust height as needed */
+    object-fit: cover;
+    border-radius: 10px;
+}
+
 
 /* Footer styles */
 footer {
